Sec15_Chap157-XXX: additional code optimization